05-testapp/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd
  name: httpd
  namespace: httpd-test
spec:
  ports:
  - name: 80-8080
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  type: ClusterIP
