05-testapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
  namespace: httpd-test
spec:
  ingressClassName: default
  rules:
  - host: httpd.kubernetes.local.com
    http:
      paths:
      - backend:
          service:
            name: httpd
            port:
              number: 8080
        path: /
        pathType: Prefix
